cmake_minimum_required(VERSION 3.1)
project(algo)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -fPIC")
set(CMAKE_CXX_FLAGS "-pthread")
find_package(Threads REQUIRED)

add_executable(algo_1_4    Module_1/algo_1_4.cpp)
add_executable(algo_2_1    Module_1/algo_2_1.cpp)
add_executable(algo_3_1    Module_1/algo_3_1.cpp)
add_executable(algo_4_3    Module_1/algo_4_3.cpp)
add_executable(algo_5_3    Module_1/algo_5_3.cpp)
add_executable(algo_6_3    Module_1/algo_6_3.cpp)
add_executable(algo_7_3    Module_1/algo_7_3.cpp)

add_executable(algo2_1_2   Module_2/algo2_1_2.cpp)
add_executable(algo2_2_2   Module_2/algo2_2_2.cpp)
add_executable(algo2_3_1   Module_2/algo2_3_1.cpp)
add_executable(algo2_4_1   Module_2/algo2_4_1.cpp)
add_executable(algo_huffman_code   Module_2/algo_huffman_code.cpp)
add_executable(algo3_1    Module_3/algo3_1.cpp)
add_executable(algo3_2    Module_3/algo3_2.cpp)
add_executable(algo3_3    Module_3/algo3_3.cpp)
add_executable(algo3_4    Module_3/algo3_4.cpp)
add_executable(algo3_5    Module_3/algo3_5.cpp)
add_executable(algo3_5-2    Module_3/algo3_5-2.cpp)
add_executable(rk3    rk31.cpp)

add_executable(exam    re-examination_C.c)
target_link_libraries(exam pthread)
    #rk1_1.cpp
    #rk1_3.cpp)